<resources>
    <string name="app_name">Styli</string>
    <string name="unexpected_http_response">Unexpected http response</string>
    <string name="check_your_internet_connection">Check your Internet connection</string>

    <!--  Base Activity  -->
    <string name="rationale_message">It look like you have turned off permission required for this feature. It can be enabled under the Applications Settings.</string>
    <string name="rationale_positive_button">GO TO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <!--  !Base Activity  -->
    <!--  Intro Screen  -->
    <string name="intro_image_content_description">image</string>
    <string name="intro_main_text">Discover power of AI in styling your images</string>
    <string name="intro_secondary_text">Cartoonize your images using latest solutions in AI. Apply style only to the person and swap the background. Many more possibilities soon…</string>
    <string name="intro_sign_in">Sign In</string>
    <string name="intro_sign_up">Sign Up</string>
    <!--  !Intro Screen  -->
    <!--  SignUp Screen  -->
    <string name="sign_up_title">SIGN UP</string>
    <string name="sign_up_secondary_text">Enter username, email and password\n to register your new account</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up_username_error">Username cannot be blank</string>
    <string name="sign_up_name_error">Name cannot be blank</string>
    <string name="sign_up_surname_error">Surname cannot be blank</string>
    <string name="sign_up_email_error">Email invalid</string>
    <string name="sign_up_password1_error">Password cannot be blank and must be between 8 and 24 chars</string>
    <string name="sign_up_password2_error">Please repeat the password</string>
    <string name="sign_up_passwords_different_error">Entered passwords are different</string>
    <string name="sign_up_success">Registration success</string>
    <string name="sign_up_name">Name</string>
    <string name="sign_up_surname">Surname</string>
    <string name="registration_unsuccessful">Registration unsuccessful</string>
    <!--  !SignUp Screen  -->
    <!--  SignIn Screen  -->
    <string name="sign_ip_title">SIGN IN</string>
    <string name="sign_in_secondary_text">Enter your username and password to log in</string>
    <string name="sign_in_username_error">Username cannot be blank</string>
    <string name="sign_in_password_error">Password cannot be blank and must be between 8 and 24 chars</string>
    <string name="sign_in_error">Invalid username or password</string>
    <string name="failed_to_load_user_data">Failed to load user data</string>
    <string name="image_content_description">image</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="load_user_data_error">Could not load user data</string>
    <!--  !SignIn Screen  -->
    <!--  Main Screen  -->
    <string name="add_trip">Add Trip</string>
    <string name="menu">Menu</string>
    <string name="editor">Editor</string>
    <string name="gallery">Gallery</string>
    <string name="image">Image</string>
    <string name="effect">Effect</string>
    <string name="select">Select</string>
    <string name="apply">Apply</string>
    <string name="choose_color">Choose background color</string>
    <string name="save">Save</string>
    <string name="background_image">Background image</string>
    <string name="choose_background_image">Choose background image</string>
    <string name="select_image_from_gallery">Select image from Gallery</string>
    <string name="take_photo">Capture photo from Camera</string>
    <string name="select_action">Select Action</string>
    <string name="select_effect_first">Select effect first</string>
    <string name="select_image_first">Select image first</string>
    <string name="image_upload_success">Image uploaded successfully</string>
    <string name="image_upload_fail">Image upload failed</string>
    <string name="no_images">No images</string>
    <string name="gallery_item">Gallery item</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="image_deletion_success">Image deleted successfully</string>
    <string name="image_download_success">Image downloaded successfully</string>
    <!--  !Main Screen  -->
</resources>